recursion.cons.min.Min.scala.code
def min(l:List[Int]): Int = {
  if (l == Nil) {
    return 0
  };else {
    if (l.head<=l.head) {
      return l.head + min(l.tail)
    }
  }
}